homeassistant/init.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
