homeassistant/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    loadbalancer: cilium
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.125
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 8123
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      volumes:
        - name: homeassistant-vol
          persistentVolumeClaim:
            claimName: homeassistant-truenas-pvc
      containers:
      - name: homeassistant
        image: ghcr.io/home-assistant/home-assistant:2024.4
        securityContext:
          privileged: true
        resources:
          requests:
            memory: "125Mi"
            cpu: "250m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
        ports:
        - containerPort: 8123

        volumeMounts:
          - mountPath: /config
            name: homeassistant-vol
